force-app/main/default/objects/consumer__c/fields/Mode_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_payment__c</fullName>
    <label>Mode of payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Debit card</fullName>
            </value>
            <value>
                <fullName>Net banking</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>