force-app/main/default/objects/consumer__c/fields/rice_mill_name__c.field-meta.xml
<CustomField>
    <fullName>rice_mill_name__c</fullName>
    <label>rice mill name</label>
    <referenceTo>rice_mill__c</referenceTo>
    <relationshipLabel>consumers</relationshipLabel>
    <relationshipName>consumers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>