force-app/main/default/objects/consumer__c/fields/rice_taken_by_shops_in_kgs__c.field-meta.xml
<CustomField>
    <fullName>rice_taken_by_shops_in_kgs__c</fullName>
    <label>rice taken by shops in kgs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>