force-app/main/default/objects/consumer__c/recordTypes/consumer_1.recordType-meta.xml
<RecordType>
    <fullName>consumer_1</fullName>
    <active>true</active>
    <label>consumer 1</label>
</RecordType>