force-app/main/default/objects/consumer__c/recordTypes/consumer_2.recordType-meta.xml
<RecordType>
    <fullName>consumer_2</fullName>
    <active>false</active>
    <label>consumer 2</label>
</RecordType>