force-app/main/default/objects/consumer__c/validationRules/Phonenumberoremailblankrule.validationRule-meta.xml
<ValidationRule>
    <fullName>Phonenumberoremailblankrule</fullName>
    <active>true</active>
    <description>phone number and email number should not be blank</description>
    <errorConditionFormula>OR( ISBLANK( Phone_number__c ) , ISBLANK( email__c ) )</errorConditionFormula>
    <errorMessage>please fill in your phone number</errorMessage>
</ValidationRule>